--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'Church history -- 19th century'
 - !lcc 'BR'
 - !lcsh 'Christianity'
+- GITenberg
 tableOfContents: 'Introductory thoughts, from Mr. Martineau''s writings -- Distinctive
   types of Christianity -- Christianity without priest and without ritual -- Inconsistency
   of the scheme of vicarious redemption -- Mediatorial religion -- Five points of
